Fixed ArrayList issue